client/stylesheets/modules/posts.import.less
.post {
  padding: 10px;
  border: 1px solid #EEEEEE;
  hr {
    margin-top: 15px;
    margin-bottom: 15px;
  }
  p.formatted-date, a.author {
    color: #D5D5D5;
  }
  p {
    margin-bottom: 0;
  }
  .avatar {
    margin-right: 5px;
  }
  .highlight-username {
    background: #FFEDCA;
  }
  margin-bottom: 20px;
}

form.search-posts-form {
  margin-bottom: 0;
  input {
    margin-bottom: 0;
  }
}

button.remove-post {
  margin-top: -8px;
}

ul.feed-filter {
  list-style: none;
  margin-bottom: 0;
  display: inline-block;
  li {
    float: left;
    margin-bottom: 0;
    margin-right: 10px;
    button {
      margin-bottom: 0;
      &.active {
        background: rgba(0, 0, 0, .1);
      }
    }
    &:last-child {
      margin-right: 0;
    }
  }
}

textarea {
  &.insert-post-form {
    min-height: 39px;
  }
  &.message-body-form {
    min-height: 200px;      
  }
}

